# mspyl

./: .gitignore  CREDITS  MANIFEST.in  README.md  __main__.py  pyproject.toml
src/: __init__.py  main.py
src/commands/: __init__.py  build.py  build_commands.py  package.py  package_commands.py  project.py  project_commands.py  venv.py  venv_commands.py
